--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.7.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.1.1",
@@ -21,16 +22,19 @@
     "@nestjs/typeorm": "^11.0.0",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.8.1",
+    "lucide-react": "^0.487.0",
     "next": "^15.1.7",
     "path": "^0.12.7",
     "pg": "^8.13.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "swiper": "^11.2.5",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/auth0": "^3.3.10",
     "@types/node": "^22.13.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
