--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,7 +2,11 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "module": "ESNext",
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -19,8 +23,23 @@
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
-    "plugins": [{ "name": "next" }]
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "baseUrl": "./", // Set the base directory for module resolution
+    "paths": {
+      "@utils/*": ["src/utils/*"],
+      "@lib/*": ["src/lib/*"]
+    }
   },
-  "include": ["client/src", "./dist/types/**/*.ts", "client/next-env.d.ts"],
-  "exclude": ["./node_modules"]
+  "include": [
+    "client/src",
+    "./dist/types/**/*.ts",
+    "client/next-env.d.ts"
+  ],
+  "exclude": [
+    "./node_modules"
+  ]
 }
