--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
+    "@mui/x-data-grid": "^8.2.0",
     "@nestjs/config": "^4.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "@tailwindcss/vite": "^4.0.0",
@@ -30,6 +31,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "swiper": "^11.2.5",
+    "swr": "^2.3.3",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
