chore: restructure SCSS partials and prep for search integration

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -33,7 +33,10 @@
         "./src/components/*"
       ],
       "@scss/*": [
-        "./src/styles/*"
+        "./src/scss/*"
+      ],
+      "@contexts/*": [
+        "./src/contexts/*"
       ],
     },
     "plugins": [
