feat: implement search functionality and migrate SCSS to v3 syntax

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -38,6 +38,9 @@
       "@contexts/*": [
         "./src/contexts/*"
       ],
+      "@hooks/*": [
+        "./src/hooks/*"
+      ],
     },
     "plugins": [
       {
