--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -41,6 +41,9 @@
       "@hooks/*": [
         "./src/hooks/*"
       ],
+      "@public/*": [
+        "./src/public/*"
+      ]
     },
     "plugins": [
       {
