--- a/server/bullx/package.json
+++ b/server/bullx/package.json
@@ -30,6 +30,8 @@
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "dotenv": "^16.4.7",
     "jwks-rsa": "^3.2.0",
     "passport": "^0.7.0",
