--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
+    "@mui/x-charts": "^8.5.3",
     "@mui/x-data-grid": "^8.2.0",
     "@nestjs/config": "^4.0.1",
     "@nestjs/typeorm": "^11.0.0",
