--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "recharts": "^3.0.2",
     "swiper": "^11.2.5",
     "swr": "^2.3.3",
     "tailwindcss": "^4.0.0"
