--- a/server/bullx/package.json
+++ b/server/bullx/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.14.2",
     "dotenv": "^16.4.7",
     "jwks-rsa": "^3.2.0",
+    "lodash": "^4.17.21",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -55,6 +56,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.19",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
