--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,19 @@ coverage/
 jest-html-reporters-*.html
 
 # Environment files
+.env
+.env.local
+.env.production
+.env.development
+.env*.local
+
+# Docker environment files
+docker-compose.override.yml
+
+# Secrets
+secrets/
+*.key
+*.pem
 
 # Editor-specific files
 .vscode/
